upd routes delete empty files
